WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212182
Fix rare crash in TileGrid::platformCALayerShowRepaintCounter()
https://bugs.webkit.org/show_bug.cgi?id=212182
Summary
Fix rare crash in TileGrid::platformCALayerShowRepaintCounter()
Simon Fraser (smfr)
Reported
2020-05-20 19:27:30 PDT
Fix rare crash in TileGrid::platformCALayerShowRepaintCounter()
Attachments
Patch
(2.76 KB, patch)
2020-05-20 19:28 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-20 19:28:10 PDT
Created
attachment 399924
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-20 19:28:13 PDT
<
rdar://problem/55618414
>
EWS
Comment 3
2020-05-21 14:20:58 PDT
Committed
r262028
: <
https://trac.webkit.org/changeset/262028
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399924
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug