Fix rare crash in TileGrid::platformCALayerShowRepaintCounter() https://bugs.webkit.org/show_bug.cgi?id=212182 <rdar://problem/55618414>

Reviewed by Darin Adler.

Crash data suggest that owner() can be null in platformCALayerShowRepaintCounter(),
so null-check in these functions.

* platform/graphics/ca/TileGrid.cpp:
(WebCore::TileGrid::platformCALayerDeviceScaleFactor const):
(WebCore::TileGrid::platformCALayerShowDebugBorders const):
(WebCore::TileGrid::platformCALayerShowRepaintCounter const):
(WebCore::TileGrid::isUsingDisplayListDrawing const):


Canonical link: https://commits.webkit.org/225096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262028 268f45cc-cd09-0410-ab3c-d52691b4dbfc